--- a/index.html
+++ b/index.html
@@ -82,20 +82,19 @@
 
 <div class = "box">
     <div class = "action">
-        <div class = "group">
-            <strong>Call to action! It's time!</strong>   
-            <p>Sign up for our product by checking that button right over there.</p>
-        
+        <div class = "group">Call to action! It's time!<br>  
+            Sign up for our product by checking that button right over there.
             <button>Sign up</button>
         </div>
+        
 
     </div>
 
 </div>
 
-    <footer>
+<div class = "footer">
         Coopyright @ The Odin Project By PRAE 2025
-    </footer>
+</div>
 
 
 
